--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/zorihq/tracking-script.git"
+    "url": "https://github.com/zorihq/script.git"
   },
   "keywords": [
     "analytics",
