--- a/package.json
+++ b/package.json
@@ -33,5 +33,6 @@
     "javascript-obfuscator": "^4.0.2",
     "semantic-release": "^22.0.12",
     "terser": "^5.26.0"
-  }
+  },
+  "packageManager": "pnpm@9.13.2+sha512.88c9c3864450350e65a33587ab801acf946d7c814ed1134da4a924f6df5a2120fd36b46aab68f7cd1d413149112d53c7db3a4136624cfd00ff1846a0c6cef48a"
 }
