--- a/.github/workflows/deploy-cdn.yml
+++ b/.github/workflows/deploy-cdn.yml
@@ -24,7 +24,7 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: "23.2.0"
-          cache: "npm"
+          cache: "pnpm"
 
       - name: Install dependencies
         run: npm i -g pnpm && pnpm install --frozen-lockfile
