--- a/.github/workflows/build-and-obfuscate.yml
+++ b/.github/workflows/build-and-obfuscate.yml
@@ -14,14 +14,20 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Setup Node.js
+      - uses: pnpm/action-setup@v4
+        name: Install pnpm
+        with:
+          version: 10
+          run_install: false
+
+      - name: Install Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: "23.2.0"
+          node-version: 23
           cache: "pnpm"
 
       - name: Install dependencies
-        run: npm i -g pnpm && pnpm install --frozen-lockfile
+        run: pnpm install --frozen-lockfile
 
       - name: Create dist directory
         run: mkdir -p dist
