--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
     "build": "npm run minify",
     "minify": "terser script.js --compress --mangle --output dist/script.min.js",
     "prepare-release": "npm run build",
-    "semantic-release": "semantic-release"
+    "semantic-release": "semantic-release",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage"
   },
   "repository": {
     "type": "git",
@@ -24,11 +27,16 @@
   "author": "ZoriHQ",
   "license": "MIT",
   "devDependencies": {
+    "@jest/globals": "^30.2.0",
     "@semantic-release/changelog": "^6.0.3",
     "@semantic-release/commit-analyzer": "^11.1.0",
     "@semantic-release/git": "^10.0.1",
     "@semantic-release/github": "^9.2.6",
     "@semantic-release/release-notes-generator": "^12.1.0",
+    "@types/jest": "^30.0.0",
+    "jest": "^30.2.0",
+    "jest-environment-jsdom": "^30.2.0",
+    "jsdom": "^27.0.1",
     "semantic-release": "^22.0.12",
     "terser": "^5.44.0"
   },
