--- a/.releaserc.json
+++ b/.releaserc.json
@@ -49,6 +49,12 @@
       }
     ],
     [
+      "@semantic-release/npm",
+      {
+        "npmPublish": false
+      }
+    ],
+    [
       "@semantic-release/github",
       {
         "assets": [
